--- a/contrib_0.3/Graphics/libjpegls/Makefile
+++ b/contrib_0.3/Graphics/libjpegls/Makefile
@@ -28,6 +28,6 @@ install: $(TARGET)
 	$(INSTALL) jpegls.h $(INCDIR)
 
 uninstall:
-	rm -f $(INCDIR)/baygui.h
+	rm -f $(INCDIR)/jpegls.h
 
 include dependencies
