*** empty log message ***

--- a/contrib_0.3/Makefile
+++ b/contrib_0.3/Makefile
@@ -1,12 +1,14 @@
 all:
+	cd Graphics/libjpegls && touch dependencies && make && make install
 	cd X/gui && touch dependencies && make && make install
 	cd Graphics/libbaygui && touch dependencies && make && make install
 	cd Shells/gshell && touch dependencies && make && make install
 	cd X/glaunch && touch dependencies && make && make install
-	cd ../MonaNew/tool/mkimg && make && ./qemu.exe -L . -m 64 -fda mona.img -enable-audio -localtime
+	cd ../MonaNew/tool/mkimg && make
 
 clean:
-	cd X/gui && make distclean
-	cd Graphics/libbaygui && make distclean
+	cd Graphics/libjpegls && make clean
+	cd X/gui && make clean
+	cd Graphics/libbaygui && make clean
 	cd Shells/gshell && make clean
 	cd X/glaunch && make clean
