remove ScrollBar, ScrollableControl

--- a/Mona/apps/gui/MonaDat/Makefile
+++ b/Mona/apps/gui/MonaDat/Makefile
@@ -2,9 +2,7 @@ TARGET  = MONADAT
 SOURCES = \
 	./Form1.cpp \
 	./CodeConv.cpp \
-	./SheetTab.cpp \
-	MonaForms/ScrollBar.cpp \
-	MonaForms/ScrollableControl.cpp
+	./SheetTab.cpp
 
 INSTDIR    = $(BINDIR)/iso/APPS/MONAFRMS/$(TARGET).APP
 INSTFILES  = dat/MONALOGO.BM2 dat/02.DT2 dat/03.DT2 dat/04.DT2 dat/05.DT2 dat/06.DT2 dat/07.DT2 dat/08.DT2 dat/09.DT2 dat/10.DT2 dat/11.DT2
