--- a/contrib_0.3/Graphics/libgui/Makefile
+++ b/contrib_0.3/Graphics/libgui/Makefile
@@ -26,6 +26,8 @@ SOURCES = \
 	System/Mona/Forms/Cursor.cpp \
 	System/Mona/Forms/Form.cpp \
 	System/Mona/Forms/Label.cpp \
+	System/Mona/Forms/ScrollableControl.cpp \
+	System/Mona/Forms/ScrollBar.cpp \
 	System/Mona/Forms/Timer.cpp \
 	System/Text/Encoding.cpp
 
