implement JNoiz2bg

--- a/Mona/samples/non-gui/gcj/Makefile
+++ b/Mona/samples/non-gui/gcj/Makefile
@@ -1,6 +1,6 @@
 TARGET     = GCJ
-SOURCES    = main.cpp
-JSOURCES   = A.java
+SOURCES    = main.cpp SimpleCanvas-Mona.cpp
+JSOURCES   = JNoiz2bg.java SimpleCanvas.java
 INSTDIR    = $(BINDIR)/iso/APPS
 CLEANFILES = $(OBJECTS) $(JCLASSES) *.class *.stackdump
 
