--- a/Mona/src/lib/sms_gc/Makefile
+++ b/Mona/src/lib/sms_gc/Makefile
@@ -1,4 +1,13 @@
-TARGET  = $(LIBDIR)/libsms_gc.a
+LIB_STATIC   = $(LIBDIR)/libsms_gc.a
+TARGET       = $(CRT_OBJECT) $(LIB_STATIC)
+
+ifneq ($(BUILD_TARGET),ELF)
+LIB_IMPORT   = $(LIBDIR)/libsms_gc-imp.a
+LIB_DYNAMIC  = SMSGC.DLL
+LIB_DYNAMIC5 = SMSGC.DL5
+TARGET      += $(LIB_IMPORT) $(LIB_IMPORT) $(LIB_DYNAMIC) $(LIB_DYNAMIC5)
+endif
+
 SOURCES = sms_gc.cpp sms_ptr_dict.cpp
 
 MONADIR = ../../..
@@ -8,10 +17,21 @@ INCLUDE = -I$(INCDIR)
 
 all: $(TARGET)
 
-$(TARGET): $(OBJECTS)
+$(LIB_STATIC): $(OBJECTS)
 	rm -f $@
 	$(AR) $@ $(OBJECTS)
 	$(RANLIB) $@
+
+ifneq ($(BUILD_TARGET),ELF)
+$(LIB_IMPORT): $(LIB_DYNAMIC)
+$(LIB_DYNAMIC): $(OBJECTS)
+	$(LD) --export-all-symbols --out-implib $(LIB_IMPORT) -o $@ $(OBJECTS) -L$(MONADIR)/lib -lmonapi-imp
+	$(STRIP) $@
+
+$(LIB_DYNAMIC5): $(LIB_DYNAMIC)
+#	bzip2 -c $(LIB_DYNAMIC) > $@
+	$(MONADIR)/bin/bim2bin in:$(LIB_DYNAMIC) out:$@ -osacmp -tek5 BS:0 eprm:z0
+endif
 
 clean:
 	rm -f $(OBJECTS) $(TARGET)
@@ -24,5 +44,11 @@ depend:
 	$(CXX) -MM $(INCLUDE) $(CXXFLAGS) $(SOURCES) > dependencies
 
 install: $(TARGET)
+ifneq ($(BUILD_TARGET),ELF)
+	mkdir -p $(MONADIR)/bin/root/LIBS
+	mkdir -p $(MONADIR)/bin/iso/LIBS
+	$(INSTALL) $(LIB_DYNAMIC5) $(MONADIR)/bin/root/LIBS
+	$(INSTALL) $(LIB_DYNAMIC5) $(MONADIR)/bin/iso/LIBS
+endif
 
 include dependencies
