*** empty log message ***

--- a/contrib_0.3/Devel/tmpmonalibc/Makefile
+++ b/contrib_0.3/Devel/tmpmonalibc/Makefile
@@ -14,7 +14,7 @@ include $(MONADIR)/share/configs/Makefile.inc
 CSOURCES = math.c stdlib.c stdio.c stdarg.c string.c setjmp.c time.c
 OBJECTS  = $(CSOURCES:.c=.o)
 INCLUDE  = -I./ -I$(MONADIR)/include
-LINK     = -L$(MONADIR)/lib -L../Mesa-6.2.1/lib -lmonalibc-imp -lmonapi-imp
+LINK     = -L$(MONADIR)/lib -lmonalibc-imp -lmonapi-imp
 
 .SUFFIXES: .c .o
 .c.o:
@@ -39,6 +39,9 @@ clean:
 
 install: $(TARGET)
 ifneq ($(BUILD_TARGET),ELF)
-#	$(INSTALL) -m 0644 $(LIB_DYNAMIC) $(MONADIR)/bin/iso/LIBS
 	$(INSTALL) -m 0644 $(LIB_DYNAMIC) $(MONADIR)/bin/LIBS
 endif
+	mkdir -p $(MONADIR)/include/tmpmonalibc
+	$(INSTALL) *.h $(MONADIR)/include/tmpmonalibc
+	$(INSTALL) lib*.a $(MONADIR)/lib
+
